// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sign getSigningBytes should return transaction bytes for given params 1`] = `
Object {
  "data": Array [
    8,
    2,
    16,
    0,
    24,
    1,
    32,
    128,
    173,
    226,
    4,
    42,
    32,
    241,
    185,
    244,
    238,
    113,
    181,
    213,
    133,
    125,
    59,
    52,
    109,
    68,
    28,
    169,
    103,
    242,
    120,
    112,
    235,
    238,
    136,
    86,
    157,
    179,
    100,
    253,
    19,
    226,
    138,
    219,
    163,
    50,
    33,
    8,
    128,
    250,
    191,
    166,
    178,
    182,
    143,
    7,
    18,
    20,
    58,
    151,
    31,
    208,
    43,
    74,
    7,
    252,
    32,
    170,
    209,
    147,
    109,
    60,
    177,
    210,
    99,
    185,
    110,
    15,
    26,
    0,
  ],
  "type": "Buffer",
}
`;

exports[`sign signTransaction should return signed transaction for given params schema 1`] = `
Object {
  "commandID": 0,
  "fee": 10000000n,
  "id": Object {
    "data": Array [
      7,
      53,
      247,
      171,
      90,
      170,
      50,
      255,
      24,
      125,
      103,
      145,
      62,
      58,
      126,
      10,
      65,
      97,
      97,
      191,
      139,
      87,
      212,
      58,
      75,
      155,
      47,
      247,
      138,
      66,
      85,
      220,
    ],
    "type": "Buffer",
  },
  "moduleID": 2,
  "nonce": 1n,
  "params": Object {
    "amount": 4008489300000000n,
    "data": "",
    "recipientAddress": Object {
      "data": Array [
        58,
        151,
        31,
        208,
        43,
        74,
        7,
        252,
        32,
        170,
        209,
        147,
        109,
        60,
        177,
        210,
        99,
        185,
        110,
        15,
      ],
      "type": "Buffer",
    },
  },
  "senderPublicKey": Object {
    "data": Array [
      241,
      185,
      244,
      238,
      113,
      181,
      213,
      133,
      125,
      59,
      52,
      109,
      68,
      28,
      169,
      103,
      242,
      120,
      112,
      235,
      238,
      136,
      86,
      157,
      179,
      100,
      253,
      19,
      226,
      138,
      219,
      163,
    ],
    "type": "Buffer",
  },
  "signatures": Array [
    Object {
      "data": Array [
        150,
        207,
        202,
        75,
        137,
        121,
        185,
        137,
        101,
        128,
        7,
        1,
        250,
        59,
        184,
        109,
        17,
        223,
        220,
        54,
        178,
        82,
        20,
        180,
        235,
        18,
        116,
        146,
        154,
        226,
        151,
        6,
        4,
        239,
        242,
        20,
        127,
        131,
        63,
        224,
        55,
        174,
        94,
        244,
        204,
        128,
        97,
        103,
        86,
        106,
        29,
        217,
        200,
        194,
        163,
        211,
        0,
        56,
        122,
        174,
        89,
        125,
        242,
        10,
      ],
      "type": "Buffer",
    },
  ],
}
`;

exports[`sign signTransactionWithPrivateKey should return signed transaction for given asset schema 1`] = `
Object {
  "asset": Object {
    "amount": 4008489300000000n,
    "data": "",
    "recipientAddress": Object {
      "data": Array [
        58,
        151,
        31,
        208,
        43,
        74,
        7,
        252,
        32,
        170,
        209,
        147,
        109,
        60,
        177,
        210,
        99,
        185,
        110,
        15,
      ],
      "type": "Buffer",
    },
  },
  "assetID": 0,
  "fee": 10000000n,
  "id": Object {
    "data": Array [
      33,
      18,
      10,
      14,
      117,
      54,
      84,
      22,
      237,
      194,
      176,
      39,
      247,
      168,
      190,
      136,
      126,
      149,
      163,
      3,
      87,
      71,
      187,
      220,
      122,
      147,
      0,
      230,
      203,
      126,
      8,
      111,
    ],
    "type": "Buffer",
  },
  "moduleID": 2,
  "nonce": 1n,
  "senderPublicKey": Object {
    "data": Array [
      241,
      185,
      244,
      238,
      113,
      181,
      213,
      133,
      125,
      59,
      52,
      109,
      68,
      28,
      169,
      103,
      242,
      120,
      112,
      235,
      238,
      136,
      86,
      157,
      179,
      100,
      253,
      19,
      226,
      138,
      219,
      163,
    ],
    "type": "Buffer",
  },
  "signatures": Array [
    Object {
      "data": Array [
        206,
        116,
        104,
        108,
        193,
        106,
        133,
        152,
        100,
        139,
        75,
        238,
        38,
        30,
        250,
        153,
        110,
        114,
        138,
        114,
        92,
        236,
        61,
        137,
        45,
        220,
        117,
        49,
        163,
        145,
        2,
        73,
        243,
        251,
        96,
        236,
        35,
        202,
        253,
        3,
        68,
        250,
        228,
        145,
        213,
        31,
        9,
        231,
        21,
        167,
        202,
        108,
        163,
        72,
        12,
        216,
        157,
        83,
        78,
        174,
        155,
        244,
        84,
        5,
      ],
      "type": "Buffer",
    },
  ],
}
`;

exports[`sign when running scenario "multisignature_registration_transaction" Both mandatory and optional member group should have correct signatures 1`] = `[Function]`;

exports[`sign when running scenario "multisignature_registration_transaction" Only mandatory members should have correct signatures 1`] = `[Function]`;

exports[`sign when running scenario "multisignature_registration_transaction" Only optional members should have correct signatures 1`] = `[Function]`;

exports[`sign when running scenario "multisignature_registration_transaction" Second signature case should have correct signatures 1`] = `[Function]`;

exports[`sign when running scenario "multisignature_registration_transaction" Sender is a member of the group should have correct signatures 1`] = `[Function]`;
